--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-jobmanager-common >= 0.12.0
+jobmanager-common >= 0.13.4
 flask >= 0.10
-docker
-arrow
-configargparse
-flask_socketio
+docker >= 3.1
+arrow >= 0.12
+configargparse >= 0.13
+flask_socketio >= 2.9
+eventlet >= 0.22
